# public/docs/openapi.yaml
@@ -30,7 +30,7 @@ paths:
           in: header
           name: X-api-version
           description: ''
-          example: fugit
+          example: nihil
           schema:
             type: string
       responses:
@@ -74,19 +74,19 @@ paths:
                 full_name:
                   type: string
                   description: 'Must be at least 3 characters. Must not be greater than 100 characters.'
-                  example: ngufwcdwezsytcjqdsbhxhkxbeiaazgfwqqsgwgmtbqybufnsrchnbzeijwtaxgc
+                  example: umwxrfirllmayuisyrvnitbfs
                 email:
                   type: string
                   description: validation.email.
-                  example: deckow.sarai@example.com
+                  example: mraz.gloria@example.net
                 phone:
                   type: string
                   description: ''
-                  example: laudantium
+                  example: debitis
                 password:
                   type: string
                   description: ''
-                  example: impedit
+                  example: iusto
               required:
                 - full_name
                 - phone
@@ -179,8 +179,8 @@ paths:
       security: []
   /api/v1/vehicle/add:
     post:
-      summary: 'Add New Vehicle'
-      description: 'This will add new vehicle to database'
+      summary: 'Neues Fahrzeug hinzufügen'
+      description: 'Dadurch wird der Datenbank ein neues Fahrzeug hinzugefügt'
       parameters:
         -
           in: header
@@ -237,34 +237,34 @@ paths:
             schema:
               type: object
               properties:
-                manufacturer:
+                herstellerin:
                   type: string
-                  description: 'Name of manufacturer.'
+                  description: 'Name of herstellerin.'
                   example: Toyota
-                model:
+                modell:
                   type: string
-                  description: 'Model number of vehicle.'
+                  description: 'modell number of vehicle.'
                   example: 74CUG
-                vin:
+                fin:
                   type: string
                   description: 'Identification number of vehicle.'
                   example: '754454'
-                first_registration:
+                erste_registrierung:
                   type: date
                   description: 'Date format should be YYYY-mm-dd'
                   example: '2020-12-12'
-                kilometers_stand:
+                kilometerstand:
                   type: integer
                   description: 'How much vehicles can drive.'
                   example: 40
               required:
-                - manufacturer
-                - model
-                - vin
+                - herstellerin
+                - modell
+                - fin
   /api/v1/vehicle/all:
     post:
-      summary: 'Get All Vehicles'
-      description: 'This will select and fetched all vehicles'' data from database'
+      summary: 'Holen Sie sich alle Fahrzeuge'
+      description: 'Dadurch werden alle Fahrzeugdaten aus der Datenbank ausgewählt und abgerufen'
       parameters:
         -
           in: header
@@ -294,13 +294,13 @@ paths:
             text/plain:
               schema:
                 type: string
-                example: "{{\n\"success\": true,\n\"message\": \"Fetched vehicles\",\n\"code\": 200,\n\"data\": [\n{\n\"id\": 2,\n\"manufacturer\": \"27575\",\n\"model\": \"28588\",\n\"vin\": \"45678d\",\n\"first_registration\": \"0222-01-20\",\n\"kilometers_stand\": 654564,\n\"created_at\": \"2022-01-20T09:44:16.000000Z\",\n\"updated_at\": \"2022-01-20T10:03:33.000000Z\"\n},\n{\n\"id\": 3,\n\"manufacturer\": \"Toyota\",\n\"model\": \"285TC\",\n\"vin\": \"96876\",\n\"first_registration\": \"1997-01-20\",\n\"kilometers_stand\": 40,\n\"created_at\": \"2022-01-20T09:44:32.000000Z\",\n\"updated_at\": \"2022-01-20T09:44:32.000000Z\"\n},\n{\n\"id\": 4,\n\"manufacturer\": \"BMW\",\n\"model\": \"BM54\",\n\"vin\": \"78654F\",\n\"first_registration\": \"1997-01-20\",\n\"kilometers_stand\": 140,\n\"created_at\": \"2022-01-20T09:44:55.000000Z\",\n\"updated_at\": \"2022-01-20T09:44:55.000000Z\"\n},\n{\n\"id\": 5,\n\"manufacturer\": \"BMW\",\n\"model\": \"BM754\",\n\"vin\": \"23456B\",\n\"first_registration\": \"2022-01-20\",\n\"kilometers_stand\": 180,\n\"created_at\": \"2022-01-20T09:45:18.000000Z\",\n\"updated_at\": \"2022-01-20T09:45:18.000000Z\"\n},\n{\n\"id\": 6,\n\"manufacturer\": \"Audi\",\n\"model\": \"AUD78541\",\n\"vin\": \"854694\",\n\"first_registration\": \"2022-01-20\",\n\"kilometers_stand\": 180,\n\"created_at\": \"2022-01-20T09:45:32.000000Z\",\n\"updated_at\": \"2022-01-20T09:45:32.000000Z\"\n}\n]\n}"
+                example: "{{\n\"success\": true,\n\"message\": \"Abgeholte Fahrzeuge\",\n\"code\": 200,\n\"data\": [\n{\n\"id\": 2,\n\"herstellerin\": \"27575\",\n\"modell\": \"28588\",\n\"fin\": \"45678d\",\n\"erste_registrierung\": \"0222-01-20\",\n\"kilometerstand\": 654564,\n\"erstellt_am\": \"2022-01-20T09:44:16.000000Z\",\n\"aktualisiert_am\": \"2022-01-20T10:03:33.000000Z\"\n},\n{\n\"id\": 3,\n\"herstellerin\": \"Toyota\",\n\"modell\": \"285TC\",\n\"fin\": \"96876\",\n\"erste_registrierung\": \"1997-01-20\",\n\"kilometerstand\": 40,\n\"erstellt_am\": \"2022-01-20T09:44:32.000000Z\",\n\"aktualisiert_am\": \"2022-01-20T09:44:32.000000Z\"\n},\n{\n\"id\": 4,\n\"herstellerin\": \"BMW\",\n\"modell\": \"BM54\",\n\"fin\": \"78654F\",\n\"erste_registrierung\": \"1997-01-20\",\n\"kilometerstand\": 140,\n\"erstellt_am\": \"2022-01-20T09:44:55.000000Z\",\n\"aktualisiert_am\": \"2022-01-20T09:44:55.000000Z\"\n},\n{\n\"id\": 5,\n\"herstellerin\": \"BMW\",\n\"modell\": \"BM754\",\n\"fin\": \"23456B\",\n\"erste_registrierung\": \"2022-01-20\",\n\"kilometerstand\": 180,\n\"erstellt_am\": \"2022-01-20T09:45:18.000000Z\",\n\"aktualisiert_am\": \"2022-01-20T09:45:18.000000Z\"\n},\n{\n\"id\": 6,\n\"herstellerin\": \"Audi\",\n\"modell\": \"AUD78541\",\n\"fin\": \"854694\",\n\"erste_registrierung\": \"2022-01-20\",\n\"kilometerstand\": 180,\n\"erstellt_am\": \"2022-01-20T09:45:32.000000Z\",\n\"aktualisiert_am\": \"2022-01-20T09:45:32.000000Z\"\n}\n]\n}"
       tags:
         - Endpoints
   '/api/v1/vehicle/view/{id}':
     post:
-      summary: 'View Single Vehicle'
-      description: 'This will show single vehicle'
+      summary: 'Einzelfahrzeug anzeigen'
+      description: 'Dies zeigt ein einzelnes Fahrzeug'
       parameters:
         -
           in: header
@@ -330,7 +330,7 @@ paths:
             text/plain:
               schema:
                 type: string
-                example: "{\n\"success\": true,\n\"message\": \"Vehicle fetched\",\n\"code\": 200,\n\"data\": {\n\"id\": 2,\n\"manufacturer\": \"27575\",\n\"model\": \"28588\",\n\"vin\": \"45678d\",\n\"first_registration\": \"0222-01-20\","
+                example: "{\n\"success\": true,\n\"message\": \"Fahrzeug abgeholt\",\n\"code\": 200,\n\"data\": {\n\"id\": 2,\n\"herstellerin\": \"27575\",\n\"modell\": \"28588\",\n\"fin\": \"45678d\",\n\"erste_registrierung\": \"0222-01-20\","
       tags:
         - Endpoints
     parameters:
@@ -344,8 +344,8 @@ paths:
           type: integer
   '/api/v1/vehicle/edit/{id}':
     post:
-      summary: 'Edit Vehicle'
-      description: 'This will edit vehicle data'
+      summary: 'Fahrzeug bearbeiten'
+      description: 'Dadurch werden Fahrzeugdaten bearbeitet'
       parameters:
         -
           in: header
@@ -377,7 +377,7 @@ paths:
                 type: object
                 example:
                   success: true
-                  message: 'User address successfully updated'
+                  message: 'Fahrzeug erfolgreich aktualisiert'
                   code: 200
                   data: []
                 properties:
@@ -386,7 +386,7 @@ paths:
                     example: true
                   message:
                     type: string
-                    example: 'User address successfully updated'
+                    example: 'Fahrzeug erfolgreich aktualisiert'
                   code:
                     type: integer
                     example: 200
@@ -402,30 +402,30 @@ paths:
             schema:
               type: object
               properties:
-                manufacturer:
+                herstellerin:
                   type: string
-                  description: 'Name of manufacturer.'
+                  description: 'Name of herstellerin.'
                   example: Toyota
-                model:
+                modell:
                   type: string
-                  description: 'Model number of vehicle.'
+                  description: 'modell number of vehicle.'
                   example: 74CUG
-                vin:
+                fin:
                   type: string
                   description: 'Identification number of vehicle.'
                   example: '754454'
-                first_registration:
+                erste_registrierung:
                   type: date
                   description: 'Date format should be YYYY-mm-dd.'
                   example: '2020-12-12'
-                kilometers_stand:
+                kilometerstand:
                   type: integer
                   description: 'How much vehicles can drive.'
                   example: 40
               required:
-                - manufacturer
-                - model
-                - vin
+                - herstellerin
+                - modell
+                - fin
     parameters:
       -
         in: path
@@ -437,8 +437,8 @@ paths:
           type: integer
   '/api/v1/vehicle/delete/{id}':
     post:
-      summary: 'Delete Vehicle'
-      description: 'This will delete data from database'
+      summary: 'Fahrzeug löschen'
+      description: 'Dadurch werden Daten aus der Datenbank gelöscht'
       parameters:
         -
           in: header
@@ -470,7 +470,7 @@ paths:
                 type: object
                 example:
                   success: true
-                  message: 'Vehicle successfully deleted'
+                  message: 'Fahrzeug erfolgreich gelöscht'
                   code: 200
                   data: []
                 properties:
@@ -479,7 +479,7 @@ paths:
                     example: true
                   message:
                     type: string
-                    example: 'Vehicle successfully deleted'
+                    example: 'Fahrzeug erfolgreich gelöscht'
                   code:
                     type: integer
                     example: 200
